terraform/main.tf
provider "aws" {
  region = var.region
}

# --- IAM Role for SSM ---
resource "aws_iam_role" "ssm_role" {
  name = "skillhub-ssm-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "ssm_policy" {
  role       = aws_iam_role.ssm_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}



resource "aws_iam_instance_profile" "ssm_profile" {
  name = "skillhub-ssm-profile"
  role = aws_iam_role.ssm_role.name
}

# --- Security Group ---
resource "aws_security_group" "skillhub_sg" {
  name        = "skillhub_sg"
  description = "Allow HTTP and App Ports (No SSH needed due to SSM)"

  ingress {
    description = "Frontend HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Backend API"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Grafana"
    from_port   = 3001
    to_port     = 3001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Prometheus"
    from_port   = 9091
    to_port     = 9091
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# --- EC2 Instance ---
resource "aws_instance" "skillhub_server" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  
  # IAM Instance Profile for SSM access
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name

  vpc_security_group_ids = [aws_security_group.skillhub_sg.id]

  root_block_device {
    volume_size = 20 # GB
  }

  tags = {
    Name = "SkillHub-Server"
  }
}
